fix: add formater (reformateo con google-java-format)
Salida de `mvn spotless:apply` con la configuracion del commit anterior: 275
archivos java pasados por googleJavaFormat, removeUnusedImports y
formatAnnotations.

Es el mismo reformateo que traia feat/improvements, regenerado sobre la base
actual. El original se calculo contra un main anterior a P10.9 y ya no aplicaba:
el merge daba 17 archivos en conflicto, y ademas revertia el arreglo de
InputResourceColumnsStayInSyncTest (QA-001) porque reformateaba ese archivo sin
incluirlo.

Solo formato: ni una linea de logica cambia. Se verifica con la suite completa y
con que un segundo `mvn compile` no vuelva a modificar nada.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>